Add target blank

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 
     // Create a DataSet (allows two way data-binding)
     var items = new vis.DataSet([
-      { id: 1, progression: 2157, total: 2157, content: '<a href="https://cmro.travis-starnes.com/golden_list.php">Golden Age</a>', start: '1939-01-01', end: '1961-01-01' },
-      { id: 2, progression: 24984, total: 27000, content: '<a href="https://cmro.travis-starnes.com/list.php">Main 616</a>', start: '1961-01-01', end: '2018-01-01' },
-      { id: 3, progression: 189, total: 189, content: '<a href="https://cmro.travis-starnes.com/wwii_list.php">Silver Age WWII</a>', start: '1963-01-01', end: '1979-01-01' },
-      { id: 4, progression: 1954, total: 2000, content: '<a href="https://cmro.travis-starnes.com/western_list.php">Western</a>', start: '1948-01-01', end: '1975-01-01' },
-      { id: 5, progression: 5149, total: 5160, content: '<a href="https://cmro.travis-starnes.com/romance_list.php">Romance/Teen</a>', start: '1942-01-01', end: '1971-01-01' },
-      { id: 6, progression: 26, total: 733, content: '<a href="https://cmro.travis-starnes.com/hyborian_list.php">Hyborian Age</a>', start: '1970-01-01', end: '2000-01-01' },
-      { id: 7, progression: 764, total: 764, content: '<a href="https://cmro.travis-starnes.com/ultimate_list.php">Ultimate</a>', start: '2000-01-01', end: '2015-01-01' },
-      { id: 8, progression: 12570, total: 30000, content: '<a href="https://cmro.travis-starnes.com/complete_list.php">Expanded</a>', start: '1939-01-01', end: '2018-01-01' },
+      { id: 1, progression: 2157, total: 2157, content: '<a href="https://cmro.travis-starnes.com/golden_list.php" target="_blank">Golden Age</a>', start: '1939-01-01', end: '1961-01-01' },
+      { id: 2, progression: 24984, total: 27000, content: '<a href="https://cmro.travis-starnes.com/list.php" target="_blank">Main 616</a>', start: '1961-01-01', end: '2018-01-01' },
+      { id: 3, progression: 189, total: 189, content: '<a href="https://cmro.travis-starnes.com/wwii_list.php" target="_blank">Silver Age WWII</a>', start: '1963-01-01', end: '1979-01-01' },
+      { id: 4, progression: 1954, total: 2000, content: '<a href="https://cmro.travis-starnes.com/western_list.php" target="_blank">Western</a>', start: '1948-01-01', end: '1975-01-01' },
+      { id: 5, progression: 5149, total: 5160, content: '<a href="https://cmro.travis-starnes.com/romance_list.php" target="_blank">Romance/Teen</a>', start: '1942-01-01', end: '1971-01-01' },
+      { id: 6, progression: 26, total: 733, content: '<a href="https://cmro.travis-starnes.com/hyborian_list.php" target="_blank">Hyborian Age</a>', start: '1970-01-01', end: '2000-01-01' },
+      { id: 7, progression: 764, total: 764, content: '<a href="https://cmro.travis-starnes.com/ultimate_list.php" target="_blank">Ultimate</a>', start: '2000-01-01', end: '2015-01-01' },
+      { id: 8, progression: 12570, total: 30000, content: '<a href="https://cmro.travis-starnes.com/complete_list.php" target="_blank">Expanded</a>', start: '1939-01-01', end: '2018-01-01' },
     ]);
 
     // Configuration for the Timeline
